[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.3.0"
serde = { version = "1.0.152", features = ["derive"]}
tokio = { version = "1.24.2", features = ["macros", "rt-multi-thread"] }
config = "0.13"
uuid = { version = "1.3.0", features = ["v4"] }
chrono = { version = "0.4.24", default_features = false, features = ["clock"] }

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [ "runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate" ]

[dev-dependencies]
reqwest = "0.11.14"
